<resources>
    <string name="app_name">Helpmate</string>
    <string name="server_client_id">106635181777-kidaidh6pg71dbp3sp2a8vru52odjgo7.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="to_do">To Do</string>
    <string name="my_works">My Works</string>
    <string name="completed">Completed</string>
    <string name="activity_graph">Activity Graph</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="about_flatmate">About Flatmate</string>
    <string name="progress_creating_group">Creating new group, please wait</string>
    <string name="wrong_email">\u0020 - wrong email address</string>
    <string name="loading_contacts">Loading contacts</string>
    <string name="please_wait">Please wait...</string>
    <string name="name_email">name@email.com</string>
    <string name="status_progress">Status : in progress</string>
    <string name="status_done">Status : done</string>
    <string name="status_unauctioned">Status : unauctioned</string>
    <string name="status_auctioning">Status : auctioning</string>
    <string name="dialog_finish_work">Are you sure you want to finish this work ?</string>
    <string name="dialog_cancel_work">Are you sure you want to cancel this work ?</string>
    <string name="credits">\u0020credits</string>
    <string name="congrat">Congratulation, You win \u0020</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="work_completed_by">Work completed by:</string>
    <string name="who_won">Who won?</string>
    <string name="not_interested">not interested</string>
    <string name="lesser_bid">Please, enter a lesser bid then a last user</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="no_data">- no data</string>
    <string name="no_available_data">No available data</string>
    <string name="toast_delete">Just creator of the group can delete other users</string>
    <string name="changes_saved">Changes saved</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="log_in_wait">Log In Please Wait...</string>
    <string name="password_must">Password must have at least 7 characters</string>
    <string name="registering">Registering Please Wait...</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="reg_error">Registration Error</string>
    <string name="activate_group">Want you activate group or show group info ?</string>
    <string name="activate">Activate</string>
    <string name="info">Info</string>
    <string name="status_uncompleted">Status : uncompleted</string>
    <string name="Request">Request</string>
    <string name="user">User\u0020</string>
    <string name="add_you">\u0020add you to group\u0020</string>
    <string name="add">Add</string>
    <string name="group">Group\u0020</string>
    <string name="group_added">\u0020was added to your groups</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_work_toast">You must have selected group for add new work. If you are not a member of any group, you must create a group</string>
    <string name="one_hour">1 hour</string>
    <string name="three_hours">3 hours</string>
    <string name="six_hours">6 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="twentyfour_hours">24 hours</string>
    <string name="fourtyeight_hours">48 hours</string>
    <string name="week">week</string>
    <string name="sign_in">Sign In, Please wait...</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_facebook">Log In with Facebook</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="google_play_service_error">Google Play Services error.</string>
    <string name="id_facebook">563357540528663</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="fb_try_login">Try Log in with Google</string>
    <string name="rename_group">Rename</string>
    <string name="rename_group_title">Rename group</string>
    <string name="group_name_empty_toast">Groupname can\'t be empty</string>
    <string name="gropu_rename_toast">The group was renamed</string>
    <string name="credit"> credit</string>
    <string name="vymazat_toto">pomoc</string>
    <string name="new_work_added">New work added -\u0020</string>
    <string name="new_user_added">New user added -\u0020</string>
    <string name="removed_from_group">\u0020removed from group</string>
    <string name="you_win_auction">You win auction for:\u0020</string>
    <string name="work">Work\u0020</string>
    <string name="done">\u0020done</string>
    <string name="change_status">\u0020change status</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="please_work_name">Please, enter a name of work</string>
    <string name="please_duration_work">Please, enter a duration of work</string>
    <string name="please_time">Please, enter a time</string>
    <string name="please_date">Please, enter a date</string>
    <string name="wrond_time_date">Wrong time or date</string>
    <string name="new_work_been_added">New work has been added</string>
    <string name="time_and">Time  \u0020  -  \u0020</string>
    <string name="date_and">Date  \u0020  -  \u0020</string>
    <string name="want_you_delete_user">Want you delete user\u0020</string>
    <string name="deadline">Deadline:</string>
    <string name="duration_of_auction">Duration of auction:</string>
    <string name="who_won_1">Who won?</string>
    <string name="work_completed_by_1">Work completed by:</string>
    <string name="delete_ask">Delete ?</string>
    <string name="wrk_uncompleted_by">Work uncompleted by:</string>
    <string name="want_repeat_work">Want you repeat this work ?</string>
    <string name="repeat">Repeat</string>
    <string name="delete_repeat">Delete</string>
    <string name="main_page">Main Page</string>
    <string name="my_groups">My Groups</string>
    <string name="new_group">New Group</string>
    <string name="log_out">Log out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_here">Sign up Here</string>
    <string name="name">Name</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_here">Log in Here</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="log_in_fb">Log In with Facebook</string>
    <string name="log_out_fb">Log Out</string>
    <string name="name_of_group">Name of group</string>
    <string name="here_type_name_of_group">Here type name of group</string>
    <string name="add_members">Add members:</string>
    <string name="name_email_com">name@email.com</string>
    <string name="add_member">\u0020Add member</string>
    <string name="name_of_work">Name of work</string>
    <string name="here_type_name_of_work">Here type name of work</string>
    <string name="duration_of_work">Duration of work:</string>
    <string name="deadline1">Deadline</string>
    <string name="auction">Auction :</string>
    <string name="progress">Progress :</string>
    <string name="work_done">Work Done</string>
    <string name="members">Members:</string>
    <string name="click_here_and_add_new_work">Click here and add new work</string>
    <string name="i_am_not_interested">I am not interested</string>
    <string name="save">Save</string>
    <string name="add_bid">Add bid:</string>
    <string name="minutes">minutes</string>
    <string name="add_new_work">Add new work</string>
    <string name="my_groups_label">My Groups</string>
    <string name="group_info">Group Info</string>
    <string name="add_group">Add Group</string>
    <string name="activity_graph_label">Activity Graph</string>
    <string name="work_details">Work details</string>
    <string name="settings_label">Settings</string>
    <string name="languages">Languages</string>
    <string name="language">Language</string>
    <string name="the_group">The group\u0020</string>
    <string name="was_renamed">\u0020was renamed</string>
    <string name="user_name">User name</string>
    <string name="rename">Rename</string>
    <string name="new_name">"New name: "</string>
    <string name="the_user">The user\u0020</string>
    <string name="invite_new_user">\u0020invite you to new group</string>
    <string name="invited_new_group">You was invited to new group -\u0020</string>
    <string name="toast_add_new_work_deadline_wrong">Duration of auction can\'t outreach Deadline. The difference between Deadline and The End of Auction must be minimal 1 hour.</string>
    <string name="enter_time_date">Please, enter time and date</string>
    <string name="internet_connection">Please, control your internet connection</string>
    <string name="deleted_you_group">"You was deleted from group :\u0020"</string>
    <string name="long_duration_of_work">Duration of work is too long</string>
    <string name="credits_second">\u0020credits</string>
    <string name="toast_select_group">Please, select a groups or create a new group</string>
    <string name="demo_slide_1_1">Welcome</string>
    <string name="demo_slide_1_2">Helpmate is your helper for easier dividing works in groups</string>
    <string name="demo_slide_2_1">To Do</string>
    <string name="demo_slide_2_2">At the main page you have an overview of all works</string>
    <string name="demo_slide_3_1">Auction</string>
    <string name="demo_slide_3_2">In the auction can anyone give their opinion and add bid</string>
    <string name="demo_slide_4_1">Activity graph</string>
    <string name="demo_slide_4_2">Pie Chart shows you who and how many works</string>
</resources>
