<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single"
            android:id="@+id/group1" >
                <item
                    android:id="@+id/nav_to_do"
                    android:icon="@drawable/to_do_icon"
                    android:title="@string/main_page" />


                <item
                    android:id="@+id/nav_my_group"
                    android:icon="@drawable/group_icon"
                    android:title="@string/my_groups" />

                <!--<item
                    android:id="@+id/nav_join_group"
                    android:icon="@drawable/add_group_icon"
                    android:title="Join Existed Group" />-->

                <item
                    android:id="@+id/nav_add_group"
                    android:icon="@drawable/plus_icon"
                    android:title="@string/new_group" />

                <item
                    android:id="@+id/nav_activity_graph"
                    android:icon="@drawable/activity_graph_icon"
                    android:title="@string/activity_graph" />

        </group>

        <group android:checkableBehavior="single"
            android:id="@+id/group2" >

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings_icon"
                    android:title="@string/settings" />

                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@drawable/menu_logout"
                    android:title="@string/log_out" />

        </group>

</menu>
