<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/notificationButton">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
    <LinearLayout
        android:id="@+id/addNewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:text="@string/name_of_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView7"
            android:layout_alignBottom="@+id/editText2"
            android:layout_toStartOf="@+id/editText2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:gravity="center_vertical"
            android:textSize="17sp"
            android:layout_weight="0.1" />

        <EditText
            android:backgroundTint="@color/colorOrange"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/here_type_name_of_work"
            android:textColorHint="#d1d1d1"
            android:inputType="textCapSentences"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/work_name"
            android:layout_height="55dp"
            android:gravity="left" />

        <TextView
            android:text="@string/duration_of_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true"
            android:id="@+id/textView11"
            android:layout_toStartOf="@+id/editText2"
            android:layout_alignBottom="@+id/editText5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:layout_weight="0.1" />

        <include layout="@layout/task_duration"/>

        <TextView
            android:text="@string/deadline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true"
            android:id="@+id/textView12"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="17sp"
            android:layout_toStartOf="@+id/editText5"
            android:gravity="center_vertical"
            android:layout_weight="0.1"
            android:layout_alignBottom="@+id/deadline_spinner" />

        <Switch
            android:text="@string/time"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switchTime"
            android:layout_weight="0.1" />

        <Switch
            android:text="@string/date"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switchDate"
            android:layout_weight="0.1" />

        <CheckBox
            android:text="@string/duration_of_auction"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/textView12"
            android:id="@+id/duration_of_auction_checkBox"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="17sp" />

        <Spinner
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_below="@+id/textView11"
            android:id="@+id/deadline_spinner"
            android:layout_toEndOf="@+id/textView11"
            android:layout_height="55dp"
            android:spinnerMode="dialog" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
