<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="#efefef">

        <include layout="@layout/task_auction"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />


        <TextView
            android:text="@string/auction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewAuctionText"
            android:gravity="left|center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium" />

        <LinearLayout
            android:id="@+id/seekBar2"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingBottom="0.1in"
                android:text="@string/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutForSeekBar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layMyWorks"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonAuctionDone"
                android:onClick="onClickButtonWorkDone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@android:color/holo_orange_light"
                android:elevation="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:text="@string/work_done" />

            <Button
                android:id="@+id/buttonAuctionCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@android:color/holo_orange_light"
                android:elevation="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:text="@string/cancel" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <ListView
            android:id="@+id/listViewAuction"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />

    </LinearLayout>
</ScrollView>