<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@color/colorShadow"
    android:orientation="vertical">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:id="@+id/menu_main_page"
            android:orientation="horizontal"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/menu_to_do"
                />

            <TextView
                android:textSize="12dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:text="@string/main_page"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textStyle="normal|bold"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:elevation="10dp"
            android:id="@+id/menu_my_groups"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/menu_group"
                />

            <TextView
                android:textSize="12dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:text="@string/my_groups"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textStyle="normal|bold"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <ListView
            android:id="@+id/listViewMyGroups"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:elevation="10dp"
            android:id="@+id/menu_new_group"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/plus_icon"
                />

            <TextView
                android:textSize="12dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:text="@string/new_group"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textStyle="normal|bold"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:elevation="10dp"
            android:id="@+id/menu_activity_graph"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/menu_graph"
                />

            <TextView
                android:textSize="12dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:text="@string/activity_graph"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textStyle="normal|bold"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <include layout="@layout/task_line_black"></include>

        <LinearLayout
            android:elevation="10dp"
            android:id="@+id/menu_settings"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/menu_settings"
                />

            <TextView
                android:textSize="12dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textStyle="normal|bold"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:elevation="10dp"
            android:id="@+id/menu_log_out"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/menu_logout_new"
                />

            <TextView
                android:textSize="12dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:text="@string/log_out"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textStyle="normal|bold"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
</LinearLayout>